# KnowledgeRec

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py  events.py  taxonomy.py
backend/app/api/: admin.py  auth.py  evaluation.py  llm.py  post.py  (+6 more)
backend/models/: gbdt_ranker.pkl
backend/scripts/: add_coldstart_users.py  benchmark_recommend.py  benchmark_recommend_concurrent.py  bulk_firecrawl_community_scrape.py  clean_existing_posts.py  crawl_community_posts.py  crawl_real_posts.py  crawl_tags_and_summaries.py  evaluate.py  evaluate_cold_start.py  evaluate_cold_start_pure.py  evaluate_performance.py  expand_data.py  fix_overcleaned_posts.py  generate_mock_data.py  generate_social_network.py  generate_tag_relations.py  generate_tag_relations_llm_batch.py  generate_yelp_embeddings.py  import_domain_batch.py  import_epinions.py  import_yelp.py  init_db.py  migrate_add_auth_fields.py  migrate_add_block_tables.py  migrate_add_context_fields.py  migrate_add_dislike_behavior.py  migrate_add_notification.py  migrate_add_parent_id.py  migrate_add_tag_relations.py  migrate_tag_taxonomy.py  plot_accuracy_diversity.py  precompute_recommendations.py  refresh_user_bios.py  replace_baike_with_firecrawl_posts.py  seed_taxonomy.py  simulate_interactions.py  sync_imported_posts_and_generate_engagement.py  sync_tag_relations_to_neo4j.py  sync_user_interest_graph.py  (+2 more)
backend/tests/: README.md  conftest.py  test_auth_api.py  test_engines.py  test_feature_extractor.py  test_performance.py  test_post_api.py  test_utils.py
(+174 files in other folders)
