[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "flask-sqlalchemy>=3.1.1",
    "neo4j>=6.1.0",
    "openai>=2.20.0",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.1",
    "redis>=7.1.1",
]
