[project]
name = "backend"
version = "0.1.0"
description = "backendppt"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "faker>=40.4.0",
    "feedparser>=6.0.12",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "flask-socketio>=5.6.1",
    "flask-sqlalchemy>=3.1.1",
    "lxml>=6.0.2",
    "neo4j>=6.1.0",
    "numpy>=2.4.2",
    "openai>=2.20.0",
    "playwright>=1.58.0",
    "pyjwt>=2.9.0",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.1",
    "redis>=7.1.1",
    "requests>=2.32.5",
    "scipy>=1.17.0",
    "websocket-client>=1.9.0",
]
